--- a/app/views/services/show.html.erb
+++ b/app/views/services/show.html.erb
@@ -12,67 +12,55 @@
 </div>
 
 <div class="single">
-			<div class="container">
-						<div class="single-top-main">
-	   		<div class="col-md-5 single-top">
-	   		<div class="single-w3agile">
-							
-		<div id="picture-frame">
-			<%= image_tag "app/co4.jpg", class: "img-responsive" %>
-		</div>
-										<script src="js/jquery.zoomtoo.js"></script>
-								<script>
-			$(function() {
-				$("#picture-frame").zoomToo({
-					magnify: 1
-				});
-			});
-		</script>
-		
-		
-		
-			</div>
+	<div class="container">
+		<div class="single-top-main">
+			<div class="col-md-5 single-top">
+				<div class="single-w3agile">	
+					<div id="picture-frame">
+						<%= image_tag @service.picture.large.url, class: "img-responsive" %>
+					</div>
+					<script>
+						$(function() {
+							$("#picture-frame").zoomToo({
+								magnify: 1
+							});
+						});
+					</script>
+				</div>
 			</div>
 			<div class="col-md-7 single-top-left ">
-								<div class="single-right">
-				<h3>Product</h3>      <!--  Dummy text, feed the name from the database  -->
-				
-					
-				 <div class="pr-single">
-				  <p class="reduced ">$5.00</p>      <!--  Dummy text, feed the price from the database  -->
-				</div>
-				<div class="block block-w3">
-					<div class="starbox small ghosting"> </div>      <!--  Dummy ratings, feed the ratings from the database  -->
-				</div>
-				<p class="in-pa"> Nice bass guitar available for hire to any who needs it</p> <!--  Dummy ratings, feed the ratings from the database  -->
+				<div class="single-right">
+					<%= link_to profile_path(@service.profile_id) do %>
+						<h3><%= @service.profile.name_of_agency %></h3>
+					<% end %>      <!--  Dummy text, feed the name from the database  -->				
+					<div class="pr-single">
+						<p class="reduced "><%= @service.price %></p>      <!--  Dummy text, feed the price from the database  -->
+					</div>
+					<div class="block block-w3">
+						<div class="starbox small ghosting"> </div>      <!--  Dummy ratings, feed the ratings from the database  -->
+					</div>
+					<p class="in-pa"> <%= @service.desc_service %></p> <!--  Dummy ratings, feed the ratings from the database  -->
 			   	
-				<div class="style-textarea">
-					<form action="" method="post">
-						<textarea placeholder="Write a review"></textarea>
-					</form>
-				</div>
+					<div class="style-textarea">
+						<form action="" method="post">
+							<textarea placeholder="Start a negotiation"></textarea>
+						</form>
+					</div>
 
-				<ul class="social-top">
-					<li><a href="#" class="icon facebook"><i class="fa fa-facebook" aria-hidden="true"></i><span></span></a></li>
-					<li><a href="#" class="icon twitter"><i class="fa fa-twitter" aria-hidden="true"></i><span></span></a></li>
-					<li><a href="#" class="icon pinterest"><i class="fa fa-pinterest-p" aria-hidden="true"></i><span></span></a></li>
-					<li><a href="#" class="icon dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i><span></span></a></li>
-				</ul>
-
-				
+					<ul class="social-top">
+						<li><a href="#" class="icon facebook"><i class="fa fa-facebook" aria-hidden="true"></i><span></span></a></li>
+						<li><a href="#" class="icon twitter"><i class="fa fa-twitter" aria-hidden="true"></i><span></span></a></li>
+						<li><a href="#" class="icon pinterest"><i class="fa fa-pinterest-p" aria-hidden="true"></i><span></span></a></li>
+						<li><a href="#" class="icon dribbble"><i class="fa fa-dribbble" aria-hidden="true"></i><span></span></a></li>
+					</ul>
 					<div class="add add-3">
 						<button>Contact Supplier</button>
-					</div>
-				
-				 
-			   
-			<div class="clearfix"> </div>
+					</div>		 
+				<div class="clearfix"> </div>
 			</div>
-		 
-
-			</div>
-		   <div class="clearfix"> </div>
-	   </div>	
+		</div>
+	<div class="clearfix"> </div>
+</div>	
 				 
 				
 	</div>
