--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -1290,7 +1290,7 @@ ul.product-qty {
     width: 100%;
     height: 114px;
     display: block;
-    background: url(<%= asset_path 'app/sh.jpg' %>)no-repeat ;
+    background-image: url(<%= asset_path 'app/sh.jpg' %>)no-repeat ;
     padding: 3em 0;
     background-size: cover;
 }
@@ -2394,7 +2394,7 @@ span.last {
 	height: 32px;
 	border: none;
 	text-indent: 100%;
-	background: url(<%= asset_path 'app/arr.png' %>) no-repeat 0px 0px;
+	background-image: url(<%= asset_path 'app/arr.png' %>) no-repeat 0px 0px;
 }
 /*--responsive--*/
 @media(max-width:1440px){
@@ -3048,7 +3048,7 @@ img.img-head {
 .search-form input[type='submit'] {
     width: 35px;
     height: 35px;
-    background: url(<%= asset_path 'app/can.png' %>) no-repeat 4px 3px #FCCD1E;
+    background-image: url(<%= asset_path 'app/can.png' %>) no-repeat 4px 3px #FCCD1E;
 }
 .search-form input[type='text'] {
     width: 85%;
@@ -3336,7 +3336,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 /*--- reset code ---*/
 /*-- /link-effect --*/
 .banner-profile {
-	background:url(<%= asset_path 'app/kwaku.jpg' %>) no-repeat;
+	background-image: url(<%= asset_path 'app/kwaku.jpg' %>) no-repeat;
 	background-position:center;
 	background-size:cover;
 	-webkit-background-size:cover;
@@ -3414,7 +3414,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	display:inline-block;
 	width:40px;
 	height:40px;
-	background:url(<%= asset_path "app/social-icons.png" %>) no-repeat 0px 0px;
+	background-image: url(<%= asset_path "app/social-icons.png" %>) no-repeat 0px 0px;
 }
 .social-icons  span.facebook {
 	background-position:0px 0px;
@@ -3491,7 +3491,7 @@ img.img-responsive {
 	display:inline-block;
 	width:40px;
 	height:40px;
-	background:url(%<= asset_path "app/social-icons.png" >%) no-repeat 0px 0px;
+	background-image: url(<%= asset_path "pp/social-icons.png" %>) no-repeat 0px 0px;
 }
 .mydetails .social-icons  span.facebook {
 	background-position:0px 0px;
