Fix footer asset issue

--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -1155,7 +1155,7 @@ ul.product-qty {
     background-color: #FAB005;
     margin: 0 6px;
 }
-/*-- //footer-top --*/
+/*-- footer-top --*/
 .footer-bottom {
     text-align: center;
     margin: 4em 0 0;
@@ -1241,7 +1241,7 @@ ul.product-qty {
 .address {
     margin-top: 2em;
 }
-/*-- //footer-top --*/
+/*-- footer-top --*/
 .footer {
     background: #353535;
     padding: 5em 0;
@@ -1283,7 +1283,7 @@ ul.product-qty {
 .copy-right p a:hover {
     color: #E21737;	
 }
-/*-- //footer --*/
+/*-- footer --*/
 /*--product--*/
 .banner-top{
 	text-align: center;
@@ -3663,8 +3663,7 @@ span.shortline5 {
 	-o-transition:0.5s all;
 	-ms-transition:0.5s all;
 }
-/*-- /Gallery --*/
-/*-- Footer --*/
+
 .some-border {
   border-top: 1px solid #f2f2f2;
 }
@@ -3746,8 +3745,8 @@ hr{
 	border-top:1px solid #BDB8B8;
 	margin-top:45px;
 }
-.
-/*-- /Footer --*/
+
+/*-- Footer --*/
 /*-- sliding --*/
 .slideanim {visibility:hidden; padding: 4%;}
 .move-down { min-height: 400px; }
