SlideAdmin is visible

--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -468,10 +468,10 @@ span.fa.fa-shopping-cart.my-cart-icon {
     top: 98%;
     left: -275%;
 }
-/*-- //header --*/
+/*-- header --*/
 /*--banner--*/
 .top-top-banner{
-    background-image: url(<%= asset_path 'app/banner1.jpg' %>);
+    background-image: url(<%= asset_path "app/banner1.jpg" %>);
 }
 .main-nav-shadow {
   box-shadow: 0 0 8px 0 rgba(0, 0, 0, 0.2)
@@ -3336,7 +3336,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 /*--- reset code ---*/
 /*-- /link-effect --*/
 .banner-profile {
-	background-image: url(<%= asset_path 'app/kwaku.jpg' %>) no-repeat;
+	background: url(<%= asset_path 'app/kwaku1.jpg' %>) no-repeat;
 	background-position:center;
 	background-size:cover;
 	-webkit-background-size:cover;
@@ -3414,7 +3414,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	display:inline-block;
 	width:40px;
 	height:40px;
-	background-image: url(<%= asset_path "app/social-icons.png" %>) no-repeat 0px 0px;
+	background: url(<%= asset_path "app/social-icons.png" %>) no-repeat 0px 0px;
 }
 .social-icons  span.facebook {
 	background-position:0px 0px;
@@ -3748,7 +3748,7 @@ hr{
 
 /*-- Footer --*/
 /*-- sliding --*/
-.slideanim {visibility:hidden; padding: 4%;}
+.slideanim {padding: 4%;}
 .move-down { min-height: 400px; }
 .slide {
     /* The name of the animation */
@@ -3781,7 +3781,7 @@ hr{
         -webkit-transform: translateY(0%);
     }
 }
-/*-- /sliding --*/
+/*-- sliding --*/
 /*---- responsive-design -----*/
 @media (max-width: 1600px) {
 	.banner-profile {
