--- a/app/views/layouts/no_search.html.erb
+++ b/app/views/layouts/no_search.html.erb
@@ -103,9 +103,9 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 
 				<!-- The navigation bar thingy ends here -->
 				<br /><br />
-			<div class="logo">
+			<!--<div class="logo">
 				<h1 ><a href="index.html"><a href=""><%= image_tag "app/logo.png", class: "img-head" %><span>For all your event listing needs</span></a></h1>   <!-- Probably make the name orange, create a panel and switch tab around ///////        Done     -->
-			</div>
+			<!--</div>-->
 					
 		</div>			
 </div><br /><br />
