Worked on landing page and about tabs

--- a/app/assets/stylesheets/app/css/style.css.erb
+++ b/app/assets/stylesheets/app/css/style.css.erb
@@ -21,7 +21,6 @@ p,label{
 ul{
 	margin:0;
 	padding:0;
-  float: right;
   margin-top: 2.0em;
 }
 
@@ -203,6 +202,9 @@ img.img-head {
 }
 .head-t {
     margin: 1em 0;
+}
+.card {
+  float: right;
 }
 .card li{
 	display:inline-block;
@@ -503,6 +505,9 @@ span.fa.fa-shopping-cart.my-cart-icon {
 }
 .gray-div-bg {
   background-color: #f9f9f9;
+}
+.white-div-bg {
+  background-color: #ffffff;
 }
 .categories-tab {
   background-color: #ffffff;
@@ -1205,12 +1210,13 @@ ul.product-qty {
 .fo-grid1 p  i{
 	margin-right:7px;
 }
-.social-fo  li{
+.social-for  li{
 	list-style-type:none;
 	display:inline-block;
 	margin:0 5px;
+  text-align: center;
 }
-.social-fo li a {
+.social-for li a {
     width: 35px;
 	height: 35px;
     display: block;
@@ -1219,16 +1225,16 @@ ul.product-qty {
     color: #fff;
     line-height: 2.5em;
 }
-.social-fo li a:hover {
+.social-for li a:hover {
    transform:rotate(-360deg);
 }
-.social-fo li a.twi {
+.social-for li a.twi {
     background: #4099FF;
 }
-.social-fo li a.pin {
+.social-for li a.pin {
     background: #CD2830;
 }
-.social-fo li a.dri {
+.social-for li a.dri {
     background:#E35E90;
 }
 .address {
@@ -1238,6 +1244,10 @@ ul.product-qty {
 .footer {
     background: #353535;
     padding: 5em 0;
+    color: #fff;
+}
+.footer h2 {
+  color: #e67e22;
 }
 .footer-grid h3 {
     color: #fff;
@@ -3452,6 +3462,10 @@ span.line2 {
 }
 img.img-responsive {
     margin: auto;
+}
+.the-image {
+  width: 100%;
+  height: 450px;
 }
 .img-fix-height{
     height: 400px !important;
