--- a/app/views/layouts/search.html.erb
+++ b/app/views/layouts/search.html.erb
@@ -101,7 +101,7 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
     		
 			</div>
 		</div>
-  <!---->
+  <!-- Nav bar ends here -->
 
 
 
@@ -110,35 +110,50 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 
 <%= yield %>
 
+<!--footer-->
 <div class="footer">
 	<div class="container">
-		<div class="">e
-			<div class="footer-bottom">
-				<h2><a href="index.html">Evventor</a></h2>
-				<ul class="social-fo">
-					<li><a href="#" class=" face"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-					<li><a href="#" class=" twi"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-					<li><a href="#" class=" pin"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
-					<li><a href="#" class=" dri"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
-				</ul>
-				<div class=" address">
-					<div class="col-md-4 fo-grid1">
+		<div class="row">
+			<div class="col-md-4">
+				<h2>About Us</h2>
+				<br />
+				<p>Evventor is an innovative community marketplace that enables people list and discover a wide variety of events suppliers around them to make their event successful. We know quality, speed and reviews are important concerns when selecting your desired event service provider. That’s why if you’re organizing your next event, Evventor is your best sourcing buddy. Our mission is to help promote businesses online.</p>
+			</div>
+			<div class="col-md-8">
+				<div class="row">
+					<div class="col-md-12" align="center">
+						<h2>Evventor</h2>
+						<br />
+					</div>
+					<div class="col-md-12">
+						<div class="col-md-4 fo-grid1">
 							<p><i class="fa fa-home" aria-hidden="true"></i>No.32 Aluguntugui Street, East Legon, Accra</p>
-					</div>
-					<div class="col-md-4 fo-grid1">
+						</div>
+						<div class="col-md-4 fo-grid1">
 							<p><i class="fa fa-phone" aria-hidden="true"></i>+1234 758 839 , +1273 748 730</p>	
+						</div>
+						<div class="col-md-4 fo-grid1">
+							<p><a href="mailto:info@example.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>info@example1.com</a></p>
+						</div>
 					</div>
-					<div class="col-md-4 fo-grid1">
-						<p><a href="mailto:info@example.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>info@example1.com</a></p>
+					<div class="col-md-12" align="center">
+						<ul class="social-for">
+							<li><a href="#" class=" face"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+							<li><a href="#" class=" twi"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+							<li><a href="#" class=" pin"><i class="fa fa-pinterest-p" aria-hidden="true"></i></a></li>
+							<li><a href="#" class=" dri"><i class="fa fa-dribbble" aria-hidden="true"></i></a></li>
+						</ul>
 					</div>
-					<div class="clearfix"></div>
-					
 				</div>
 			</div>
-		<div class="copy-right">
-			<p> &copy; 2017 Eventicize. All Rights Reserved</p>
+	</div>
+	<div class="row">
+		<div class="copy-right col-md-12">
+			<p> &copy; 2017 Evventor. All Rights Reserved</p>
 		</div>
 	</div>
 </div>
+</div>
+<!-- //footer-->
 
 	<a href="#" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
