--- a/app/views/layouts/main.html.erb
+++ b/app/views/layouts/main.html.erb
@@ -72,6 +72,8 @@ function hideURLbar(){ window.scrollTo(0,1); } </script>
 					<!-- Have to put a blog link here -->
 					<li><%= link_to "Login", { controller: :access, action: :login }, { class: "fa fa-user", "aria-hidden" => "true" } %></li>
 					<li><%= link_to "Sign up", { controller: :users, action: :new }, { class: "fa fa-user", "aria-hidden" => "true" } %></li>
+					<%= link_to "twitter", "/auth/twitter/"%>
+					<%= link_to "facebook", "/auth/facebook/"%>
 					<!--<li><a href="about.html" ><i class="fa fa-file-text-o" aria-hidden="true"></i>Order History</a></li>
 					<li><a href="shipping.html" ><i class="fa fa-ship" aria-hidden="true"></i>Shipping</a></li>-->
 				</ul>
