--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -6,14 +6,8 @@
 					<%= form_for @user, url: { action: :create }, html: { class: :form_nice } do |f| %>
 						<div class="key">
 							<i class="fa fa-user" aria-hidden="true"></i>
-                            <%= f.text_field :first_name, placeholder: :First_Name %>
+                            <%= f.text_field :name, placeholder: :Full_Name %>
 							<!--<input  type="text" value="First name" name="first name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Username';}" required="">-->
-							<div class="clearfix"></div>
-						</div>
-						<div class="key">
-							<i class="fa fa-user" aria-hidden="true"></i>
-                            <%= f.text_field :last_name, placeholder: :Last_Name %>
-							<!--<input  type="text" value="Last name" name="last name" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Username';}" required="">-->
 							<div class="clearfix"></div>
 						</div>
 						<div class="key">
